# file-integrity-monitoring

./: Cargo.toml  README.md  init.sh
save/: path.json
src/: command.rs  event_dir.rs  event_file.rs  init.rs  main.rs  my_error.rs  tracker_file.rs  watcher.rs
