[package]
name = "fms"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
inotify = "0.10"

sha2 = "0.10"

serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"

notify-rust = "4"

chrono = "0.4"

diffy="0.3.0"
